# tuleap-documentation-fr

./: .gitignore  .travis.yml  Makefile  README.md  default.nix  pyproject.toml  requirements.txt
.github/: dependabot.yml  renovate.json
.github/workflows/: CI.yml
build-support/: build-tools.nix  dev-tools.nix
languages/fr/: conf.py  index.rst
languages/fr/images/screenshots/: sc_agiledashboard_access_backlog.odg  sc_agiledashboard_backlog_ranking.odg  sc_agiledashboard_cardwall.odg  sc_agiledashboard_create_new_release.odg  sc_agiledashboard_homepage.odg  sc_agiledashboard_populate_backlog.odg  sc_agiledashboard_release_plan.odg  sc_agiledashboard_short_access.odg  sc_agiledashboard_sprint_plan.odg
languages/fr/user-guide/: agile-dashboard.rst  ci.rst  citizen.rst  communication.rst  cvs.rst  doc.rst  frs.rst  gerrit.rst  git.rst  intro.rst  legal.rst  mediawiki.rst  new-project.rst  other-services.rst  overview.rst  project-admin.rst  project-summary.rst  project-website.rst  survey.rst  svn.rst  tracker-v3.rst  tracker.rst  wiki.rst
