[tool.poetry]
name = "tuleap-documentation-fr"
version = "0.0.0"
description = ""
authors = ["Enalean team"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "6.2.1"
sphinx-rtd-theme = "1.2.2"
sphinxcontrib-jquery = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
